{
    "name": "MouseControlActions",
    "maps": [
        {
            "name": "MouseInput",
            "id": "d3f5e5e5-a158-40c8-9f5e-edf448a3149e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "0aa1aa61-30eb-4f6d-8baa-d54d34420507",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3a6f42fc-4475-4758-aff3-941821747135",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "3e976bbc-08b9-4e69-b42d-c38dad2230d2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1b04a5a-9163-4a64-9096-b473a07ff14d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dab1980-0e66-495d-ab0f-8a29e730141e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee2ea536-5b3e-4d94-a6b6-4babec3a0287",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}